tests/machine/x/c/outer_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/outer_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/outer_join.c:77:29: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   77 |   result_item_list_t tmp3 = result_item_list_t_create(
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/outer_join.c:77:29: error: invalid initializer

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:52Z
