tests/machine/x/c/outer_join.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:52Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int id;
  char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customerId;
  int total;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  order_t order;
  customer_t customer;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  customer_t tmp1_data[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"},
                            (customer_t){.id = 3, .name = "Charlie"},
                            (customer_t){.id = 4, .name = "Diana"}};
  customer_list_t tmp1 = {4, tmp1_data};
  customer_list_t customers = tmp1;
  order_t tmp2_data[] = {(order_t){.id = 100, .customerId = 1, .total = 250},
                         (order_t){.id = 101, .customerId = 2, .total = 125},
                         (order_t){.id = 102, .customerId = 1, .total = 300},
                         (order_t){.id = 103, .customerId = 5, .total = 80}};
  order_list_t tmp2 = {4, tmp2_data};
  order_list_t orders = tmp2;
  result_item_list_t tmp3 = result_item_list_t_create(
      orders.len * customers.len + orders.len + customers.len);
  int tmp4 = 0;
  int *tmp5 = calloc(orders.len, sizeof(int));
  int *tmp6 = calloc(customers.len, sizeof(int));
  for (int tmp7 = 0; tmp7 < orders.len; tmp7++) {
    order_t o = orders.data[tmp7];
    for (int tmp8 = 0; tmp8 < customers.len; tmp8++) {
      customer_t c = customers.data[tmp8];
      if (!(o.customerId == c.id)) {
        continue;
      }
      tmp5[tmp7] = 1;
      tmp6[tmp8] = 1;
      tmp3.data[tmp4] = (result_item_t){.order = o, .customer = c};
      tmp4++;
    }
  }
  for (int tmp7 = 0; tmp7 < orders.len; tmp7++) {
    if (tmp5[tmp7])
      continue;
    order_t o = orders.data[tmp7];
    customer_t c = (customer_t){0};
    tmp3.data[tmp4] = (result_item_t){.order = o, .customer = c};
    tmp4++;
  }
  for (int tmp9 = 0; tmp9 < customers.len; tmp9++) {
    if (tmp6[tmp9])
      continue;
    customer_t c = customers.data[tmp9];
    order_t o = (order_t){0};
    tmp3.data[tmp4] = (result_item_t){.order = o, .customer = c};
    tmp4++;
  }
  free(tmp5);
  free(tmp6);
  tmp3.len = tmp4;
  result_item_list_t result = tmp3;
  printf("--- Outer Join using syntax ---\n");
  for (int tmp10 = 0; tmp10 < result.len; tmp10++) {
    result_item_t row = result.data[tmp10];
    if (memcmp(&row.order, &(order_t){0}, sizeof(order_t)) != 0) {
      if (memcmp(&row.customer, &(customer_t){0}, sizeof(customer_t)) != 0) {
        printf("Order %d by %s - $ %d\n", row.order.id, row.customer.name,
               row.order.total);
      } else {
        printf("Order %d by Unknown - $ %d\n", row.order.id, row.order.total);
      }
    } else {
      printf("Customer %s has no orders\n", row.customer.name);
    }
  }
  return 0;
}
